--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=quiz-bank
+
+# Manage logging level.
+logging.level.org.springframework=info
+
+# Configure URL to use for the h2 in memory database using a test database.
+spring.datasource.url=jdbc:h2:mem:testdb
